# ExoGS

./: README.md
CapExo/: README.md  collect_data.py  postprocess.py  requirements.txt  utils.py
CmdExo/: README.md  homing.py  inference.py  requirements.txt  rollout.py
CmdExo/.meta/: act_dict.json  obs_dict.json
DataProcess/: .gitignore  README.md  data_processor_1.py  data_processor_2.py
DataProcess/FoundationPose/: run_batch_pose_tracking.py  tracking.py
DataProcess/assets/: cam_intrinsic.txt  color_map.json
DataProcess/docs/: x_anylabeling_guide.md
DataProcess/utils/: __init__.py  collect_data_foundationpose.py  cut_frames.py  (+1 more)
GSAssetGen/: README.md
GaussianSim/: README.md  requirements.txt
Mask_Policy/: .gitignore  LICENSE  README.md  inference.py  pyproject.toml  train.py  vis_dataset.py
Mask_Policy/maskpolicy/: __init__.py  __version__.py  constants.py
Mask_Policy/maskpolicy/configs/: default.py  parser.py  policies.py  train.py
Mask_Policy/maskpolicy/datasets/: __init__.py  augmentation.py  constants.py  factory.py  robot_dataset.py  transforms.py  utils.py
Mask_Policy/maskpolicy/optim/: factory.py  optimizers.py  schedulers.py
Mask_Policy/maskpolicy/policies/: factory.py  normalize.py  pretrained.py
Mask_Policy/maskpolicy/policies/mask_act/: __init__.py  configuration_mask_act.py  modeling_mask_act.py
Mask_Policy/maskpolicy/policies/mask_adapter/: __init__.py  base_model.py  base_policy.py  mask_head.py  transformer.py  vision_encoder.py
Mask_Policy/maskpolicy/utils/: __init__.py  dataset_utils.py  inspect_hdf5.py  train_utils.py  transformation.py  utils.py  visualize_mask.py
Mask_Policy/train/: mask_act_config.md  mask_act_train.json  train_mask_act.sh
PoseProcess/: .gitignore  README.md
(+145 files in other folders)
